fixed mobile alignment

--- a/index.css
+++ b/index.css
@@ -13,7 +13,13 @@ html {
 
 .logo {
     text-align: center;
+}
+
+.logo img {
     margin-top: 5vh;
+    padding-left: 10vw;
+    padding-right: 10vw;
+    max-width: 80vw;
 }
 
 .stars {
@@ -117,7 +123,7 @@ html {
         font-family: 'Ubuntu', sans-serif;
         color: white;
         text-align: center;
-        margin-top: 40vh;
+        margin-top: 0vh;
         font-size: 50px;
     }
     .navbar a {
